Fix the debugger window keeping konqueror open, by refcounting it and destroying it when all KJSProxy's are gone. Also fix debugger disabling not taking effect, and many cases of debugger enabling in the middle of execution crashing by syncing things at session boundaries (imperfectly for enabling, though)

Most of the credit goes to Hugh Daschbach for masterfully analyzing the issue.

CCBUG:157685
BUG:169881

svn path=/branches/KDE/4.1/kdelibs/; revision=852920